# SistemasEmbarcadosIFMA

./: CMakeLists.txt  README.md  TinyUSB_CDC.c
AULA30-04/isr_botao2/isr_botao2/: CMakeLists.txt  isr_botao2.c
AULA30-04/isr_botao3/isr_botao3/: CMakeLists.txt  isr_botao3.c
AULA30-04/isr_botao4/isr_botao4/: CMakeLists.txt  isr_botao4.c
AULA30-04/isr_botao5/isr_botao5/: CMakeLists.txt  isr_botao5.c
AULA30-04/isr_botoes/isr_botoes/: CMakeLists.txt  isr_botao.c
AULA30-04/isr_uart/isr_uart/: CMakeLists.txt  isr_uart.c
Cap_04_Tarefa_de_envio_temporizadores/semaforo/: CMakeLists.txt  semaforo.c
Projetos/Cap_05_Tarefa _de_ envio_DMA/temp/: CMakeLists.txt  pico_sdk_import.cmake  temp_mda.c
Projetos/Cap_05_Tarefa _de_ envio_DMA/temp/inc/: ssd1306_font.h
SISTEMAS EMBARCADOS/Exemplo01/: CMakeLists.txt  Exemplo_1.c
SISTEMAS EMBARCADOS/Exemplo02/: CMakeLists.txt  Exemplo_2.c
SISTEMAS EMBARCADOS/Exemplo03/: CMakeLists.txt  Exemplo_3.c
SISTEMAS EMBARCADOS/Exemplo04/: CMakeLists.txt  Exemplo_4.c
SISTEMAS EMBARCADOS/Exemplo05/: CMakeLists.txt  Exemplo_5.c
SISTEMAS EMBARCADOS/Exemplo06/: CMakeLists.txt  Exemplo_6.c
SISTEMAS EMBARCADOS/Extras/hellomulticore/: CMakeLists.txt  hello_multicore_new.c
SISTEMAS EMBARCADOS/Extras/minhas_funcoes/: CMakeLists.txt  minhas_funcoes.c
SISTEMAS EMBARCADOS/Extras/multicore/: CMakeLists.txt  multicore.c
SISTEMAS EMBARCADOS/Extras/multicore_fifo_troca/: CMakeLists.txt  multicore_fifo_troca.c
SISTEMAS EMBARCADOS/Extras/multitask/: CMakeLists.txt  (+1 more)
SISTEMAS EMBARCADOS/FIFO_DUAL_CORE/: CMakeLists.txt  fifo_dual_core.c
(+5 files in other folders)
